--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Common
-minecraft_version=1.21.11
-yarn_mappings=1.21.11+build.4
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.3
 loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
@@ -10,8 +10,8 @@ maven_group=github.devhrytsan.radialhotbar
 archives_base_name=RadialHotBar
 
 # Dependencies
-fabric_version=0.141.3+1.21.11
-modmenu_version=17.0.0-beta.2
+fabric_version=0.138.4+1.21.10
+modmenu_version=16.0.0
 clothconfig_version=21.11.153
 
 # Done to increase the memory available to gradle.
